--- a/ChatFirebase/app/src/main/res/layout/content_main2.xml
+++ b/ChatFirebase/app/src/main/res/layout/content_main2.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -13,11 +14,12 @@
         android:layout_height="0dp"
         android:paddingBottom="@dimen/common_padding_small"
         android:background="@color/colorBackgroundDark"
+        tools:listitem="@layout/item_request"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintHeight_max="@dimen/request_max_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -25,10 +27,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorBackground"
+        tools:listitem="@layout/item_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rvRequests"
-        app:layout_constraintBottom_toTopOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
 
 
