--- a/ChatFirebase/app/src/main/res/layout/item_request.xml
+++ b/ChatFirebase/app/src/main/res/layout/item_request.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="@dimen/cardview_radius"
     card_view:cardUseCompatPadding="true"
     card_view:contentPadding="@dimen/padding_item_content">
@@ -68,14 +68,14 @@
                 android:id="@+id/tvName"
                 style="@style/TextViewItemUser.Medium"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp">
+                android:layout_height="25dp">
             </TextureView>
 
             <TextureView
                 android:id="@+id/tvEmail"
                 style="@style/TextViewItemUser.Small"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp">
+                android:layout_height="25dp">
             </TextureView>
 
 
