--- a/ChatFirebase/app/src/main/res/layout/content_user.xml
+++ b/ChatFirebase/app/src/main/res/layout/content_user.xml
@@ -28,13 +28,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <TextureView
+        <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             style="@style/TextViewItemUser.Large"/>
 
-        <TextureView
+        <TextView
             android:id="@+id/tvStatus"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
