--- a/ChatFirebase/app/src/main/res/layout/activity_main2.xml
+++ b/ChatFirebase/app/src/main/res/layout/activity_main2.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:id="@+id/contentMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".mainModule.view.MainActivity2">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -18,16 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgProfile"
-            android:layout_width="46dp"
-            android:layout_marginLeft="15dp"
-            android:layout_height="@dimen/common_notify_size"
-            android:src="@drawable/ic_emoticon_happy"
-            app:civ_border_color="@color/blue_100"
-            app:civ_circle_background_color="@android:color/white"></de.hdodenhof.circleimageview.CircleImageView>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imgProfile"
+                android:layout_width="@dimen/common_notify_size"
+                android:layout_height="@dimen/common_notify_size"
+                android:src="@drawable/ic_emoticon_happy"
+                app:civ_border_color="@color/blue_100" />
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -40,7 +40,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_input_add"
-        android:tint="@android:color/white"
-        />
+        android:tint="@android:color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
