--- a/ChatFirebase/app/src/main/res/layout/content_main2.xml
+++ b/ChatFirebase/app/src/main/res/layout/content_main2.xml
@@ -7,7 +7,7 @@
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".mainModule.view.MainActivity2"
+    tools:context=".mainModule.view.MainActivity"
     tools:showIn="@layout/activity_main2">
 
     <androidx.recyclerview.widget.RecyclerView
